sudoku-rs/src/solver/strategic/strategies/impls/snapshots/sudoku__solver__strategic__strategies__impls__naked_pairs__tests__snapshots__base_3_sample_2_direct_candidates.snap
---
source: sudoku-rs/src/solver/strategic/strategies/impls/naked_pairs.rs
description: Strategy NakedPairs executed on grid base_3_sample_2_direct_candidates
expression: "TransportDeductions :: from(deductions.clone())"
info:
  grid_input:
    - ╔═════════════════╦═════════════════╦═════════════════╗
    - ║     │     │     ║     │     │     ║ 1   │     │     ║
    - ║  2  │  5  │  6  ║     │  3  │ 4   ║     │ 4   │ 4   ║
    - ║     │  89 │     ║ 7 9 │     │ 7   ║   9 │  89 │  8  ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║   3 │   3 │     ║  2  │     │     ║  23 │     │  2  ║
    - ║     │     │  1  ║     │  6  │  5  ║     │  7  │ 4   ║
    - ║  89 │  89 │     ║   9 │     │     ║   9 │     │  8  ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║   3 │     │     ║     │     │     ║  23 │     │  2  ║
    - ║     │  4  │  7  ║  1  │     │  8  ║   6 │  5  │     ║
    - ║   9 │     │     ║     │   9 │     ║   9 │     │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │ 1 3 │   3 ║     │     │   3 ║   3 │     │     ║
    - ║  5  │   6 │ 4   ║   6 │     │   6 ║     │  2  │  9  ║
    - ║     │     │     ║ 78  │ 78  │ 7   ║ 7   │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║   3 │  23 │     ║     │     │     ║     │   3 │     ║
    - ║     │     │  8  ║  5  │  1  │  9  ║  4  │     │  6  ║
    - ║ 7   │     │     ║ 7   │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║   3 │   3 │   3 ║     │     │   3 ║   3 │   3 │     ║
    - ║     │   6 │     ║  4  │  2  │   6 ║  5  │     │  1  ║
    - ║ 7 9 │   9 │     ║     │     │ 7   ║ 7   │  8  │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║ 1 3 │ 1 3 │   3 ║     │     │     ║     │     │     ║
    - ║     │  5  │  5  ║  56 │  4  │  2  ║  8  │   6 │     ║
    - ║     │     │     ║ 7 9 │     │     ║     │   9 │ 7   ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │ 12  │     ║     │     │ 1   ║  2  │     │     ║
    - ║  6  │     │  9  ║  3  │     │     ║     │ 4   │  5  ║
    - ║     │  8  │     ║     │ 78  │ 7   ║ 7   │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │  2  ║     │     │     ║  2  │     │     ║
    - ║ 4   │  7  │ 45  ║  56 │  5  │   6 ║   6 │  1  │  3  ║
    - ║  8  │     │     ║  89 │  89 │     ║   9 │     │     ║
    - ╚═════════════════╩═════════════════╩═════════════════╝
  deductions:
    - "r8c4: delete candidate 8, because of: r3c4: candidates 7,8, r7c4: candidates 7,8"
  grid_output:
    - ╔═════════════════╦═════════════════╦═════════════════╗
    - ║     │     │     ║     │     │     ║ 1   │     │     ║
    - ║  2  │  5  │  6  ║     │  3  │ 4   ║     │ 4   │ 4   ║
    - ║     │  89 │     ║ 7 9 │     │ 7   ║   9 │  89 │  8  ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║   3 │   3 │     ║  2  │     │     ║  23 │     │  2  ║
    - ║     │     │  1  ║     │  6  │  5  ║     │  7  │ 4   ║
    - ║  89 │  89 │     ║   9 │     │     ║   9 │     │  8  ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║   3 │     │     ║     │     │     ║  23 │     │  2  ║
    - ║     │  4  │  7  ║  1  │     │  8  ║   6 │  5  │     ║
    - ║   9 │     │     ║     │   9 │     ║   9 │     │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │ 1 3 │   3 ║     │     │   3 ║   3 │     │     ║
    - ║  5  │   6 │ 4   ║   6 │     │   6 ║     │  2  │  9  ║
    - ║     │     │     ║ 78  │ 78  │ 7   ║ 7   │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║   3 │  23 │     ║     │     │     ║     │   3 │     ║
    - ║     │     │  8  ║  5  │  1  │  9  ║  4  │     │  6  ║
    - ║ 7   │     │     ║ 7   │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║   3 │   3 │   3 ║     │     │   3 ║   3 │   3 │     ║
    - ║     │   6 │     ║  4  │  2  │   6 ║  5  │     │  1  ║
    - ║ 7 9 │   9 │     ║     │     │ 7   ║ 7   │  8  │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║ 1 3 │ 1 3 │   3 ║     │     │     ║     │     │     ║
    - ║     │  5  │  5  ║  56 │  4  │  2  ║  8  │   6 │     ║
    - ║     │     │     ║ 7 9 │     │     ║     │   9 │ 7   ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │ 12  │     ║     │     │ 1   ║  2  │     │     ║
    - ║  6  │     │  9  ║  3  │     │     ║     │ 4   │  5  ║
    - ║     │  8  │     ║     │ 78  │ 7   ║ 7   │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │  2  ║     │     │     ║  2  │     │     ║
    - ║ 4   │  7  │ 45  ║  56 │  5  │   6 ║   6 │  1  │  3  ║
    - ║  8  │     │     ║  89 │   9 │     ║   9 │     │     ║
    - ╚═════════════════╩═════════════════╩═════════════════╝
---
deductions:
  - reasons:
      - position:
          row: 3
          column: 4
        candidates:
          - 7
          - 8
      - position:
          row: 7
          column: 4
        candidates:
          - 7
          - 8
    actions:
      - position:
          row: 8
          column: 4
        deleteCandidates:
          - 8
