sudoku-rs/src/solver/strategic/strategies/impls/snapshots/sudoku__solver__strategic__strategies__impls__naked_pairs__tests__snapshots__base_3_sample_3_direct_candidates.snap
---
source: sudoku-rs/src/solver/strategic/strategies/impls/naked_pairs.rs
description: Strategy NakedPairs executed on grid base_3_sample_3_direct_candidates
expression: "TransportDeductions :: from(deductions.clone())"
info:
  grid_input:
    - ╔═════════════════╦═════════════════╦═════════════════╗
    - ║     │   3 │     ║     │   3 │     ║     │     │     ║
    - ║     │   6 │  4  ║  5  │     │  2  ║  1  │  7  │  8  ║
    - ║   9 │     │     ║     │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │  2  │  2  ║     │     │     ║  2  │     │     ║
    - ║  1  │   6 │  56 ║   6 │  9  │ 4 6 ║     │  3  │  56 ║
    - ║     │  8  │ 78  ║ 7   │     │ 7   ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │  23 │  23 ║     │ 1 3 │ 1   ║  2  │     │     ║
    - ║  5  │   6 │  56 ║  8  │     │   6 ║     │  56 │  4  ║
    - ║ 7 9 │     │ 7 9 ║     │ 7   │ 7   ║   9 │   9 │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │  23 │  23 ║     │     │ 1   ║   3 │     │   3 ║
    - ║  6  │     │     ║  4  │  5  │     ║     │     │     ║
    - ║     │     │   9 ║     │     │ 78  ║ 7 9 │  89 │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │   3 ║     │     │     ║   3 │     │     ║
    - ║  5  │  7  │  5  ║  9  │     │   6 ║ 4   │  1  │  2  ║
    - ║     │     │     ║     │  8  │  8  ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║  8  │ 4   │  1  ║  2  │     │  3  ║  5  │ 4 6 │   6 ║
    - ║     │     │     ║     │ 7   │     ║     │   9 │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │ 12  │  2  ║ 1   │ 12  │ 1   ║   3 │     │     ║
    - ║  4  │   6 │   6 ║     │     │  5  ║     │  5  │  9  ║
    - ║     │  8  │ 78  ║ 7   │ 78  │ 78  ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │  2  ║ 1   │     │ 1   ║     │     │     ║
    - ║  3  │  5  │     ║     │  6  │ 4   ║  8  │ 4   │  7  ║
    - ║     │     │     ║     │     │   9 ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │ 1   │ 1   ║     │     │ 1   ║
    - ║     │  9  │     ║  3  │ 4   │ 45  ║  6  │  2  │  5  ║
    - ║ 7   │     │ 78  ║     │ 78  │ 78  ║     │     │     ║
    - ╚═════════════════╩═════════════════╩═════════════════╝
  deductions:
    - ""
  grid_output:
    - ╔═════════════════╦═════════════════╦═════════════════╗
    - ║     │   3 │     ║     │   3 │     ║     │     │     ║
    - ║     │   6 │  4  ║  5  │     │  2  ║  1  │  7  │  8  ║
    - ║   9 │     │     ║     │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │  2  │  2  ║     │     │     ║  2  │     │     ║
    - ║  1  │   6 │  56 ║   6 │  9  │ 4 6 ║     │  3  │  56 ║
    - ║     │  8  │ 78  ║ 7   │     │ 7   ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │  23 │  23 ║     │ 1 3 │ 1   ║  2  │     │     ║
    - ║  5  │   6 │  56 ║  8  │     │   6 ║     │  56 │  4  ║
    - ║ 7 9 │     │ 7 9 ║     │ 7   │ 7   ║   9 │   9 │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │  23 │  23 ║     │     │ 1   ║   3 │     │   3 ║
    - ║  6  │     │     ║  4  │  5  │     ║     │     │     ║
    - ║     │     │   9 ║     │     │ 78  ║ 7 9 │  89 │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │   3 ║     │     │     ║   3 │     │     ║
    - ║  5  │  7  │  5  ║  9  │     │   6 ║ 4   │  1  │  2  ║
    - ║     │     │     ║     │  8  │  8  ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║  8  │ 4   │  1  ║  2  │     │  3  ║  5  │ 4 6 │   6 ║
    - ║     │     │     ║     │ 7   │     ║     │   9 │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │ 12  │  2  ║ 1   │ 12  │ 1   ║   3 │     │     ║
    - ║  4  │   6 │   6 ║     │     │  5  ║     │  5  │  9  ║
    - ║     │  8  │ 78  ║ 7   │ 78  │ 78  ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │  2  ║ 1   │     │ 1   ║     │     │     ║
    - ║  3  │  5  │     ║     │  6  │ 4   ║  8  │ 4   │  7  ║
    - ║     │     │     ║     │     │   9 ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │ 1   │ 1   ║     │     │ 1   ║
    - ║     │  9  │     ║  3  │ 4   │ 45  ║  6  │  2  │  5  ║
    - ║ 7   │     │ 78  ║     │ 78  │ 78  ║     │     │     ║
    - ╚═════════════════╩═════════════════╩═════════════════╝
---
deductions: []
