sudoku-rs/src/solver/strategic/strategies/impls/snapshots/sudoku__solver__strategic__strategies__impls__naked_pairs__tests__snapshots__base_3_sample_4.snap
---
source: sudoku-rs/src/solver/strategic/strategies/impls/naked_pairs.rs
description: Strategy NakedPairs executed on grid base_3_sample_4
expression: "TransportDeductions :: from(deductions.clone())"
info:
  grid_input:
    - ╔═════════════════╦═════════════════╦═════════════════╗
    - ║     │     │   3 ║  23 │  2  │  23 ║     │     │     ║
    - ║  5  │  9  │     ║   6 │     │   6 ║  1  │  4  │  7  ║
    - ║     │     │  8  ║     │  8  │  8  ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║   3 │ 1   │ 1 3 ║     │ 12  │ 123 ║     │  2  │     ║
    - ║ 4 6 │ 4 6 │ 4   ║  9  │  5  │   6 ║  56 │   6 │  8  ║
    - ║     │     │     ║     │     │ 7   ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │ 1   │ 1   ║     │     │     ║
    - ║ 4 6 │  7  │  2  ║ 456 │  5  │   6 ║  56 │  3  │  5  ║
    - ║     │     │     ║     │  8  │  8  ║   9 │     │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │ 1   │ 1 3 ║     │     │     ║     │     │ 1 3 ║
    - ║  7  │  56 │     ║  56 │  4  │   6 ║  2  │  9  │     ║
    - ║     │     │     ║     │     │  8  ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │ 1   ║     │     │     ║     │ 1   │     ║
    - ║ 4   │  2  │ 4   ║  5  │  3  │     ║  8  │     │  6  ║
    - ║   9 │     │   9 ║     │     │   9 ║     │ 7   │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │   3 ║     │     │  2  ║   3 │     │   3 ║
    - ║  8  │ 4 6 │ 4   ║  1  │  7  │   6 ║ 4   │  5  │ 4   ║
    - ║     │     │   9 ║     │     │   9 ║     │     │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║  2  │     │     ║     │     │     ║   3 │ 1   │     ║
    - ║     │     │  5  ║  7  │  6  │  4  ║     │     │  9  ║
    - ║     │  8  │     ║     │     │     ║     │  8  │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │     │     ║  2  │ 12  │     ║     │ 1   │ 1   ║
    - ║ 4   │  3  │  6  ║     │     │  5  ║ 4   │     │ 4   ║
    - ║   9 │     │     ║     │   9 │     ║ 7   │ 78  │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │   3 ║   3 │     │     ║
    - ║  1  │ 4   │ 4   ║  8  │     │     ║ 456 │   6 │  2  ║
    - ║     │     │ 7 9 ║     │   9 │   9 ║ 7   │ 7   │     ║
    - ╚═════════════════╩═════════════════╩═════════════════╝
  deductions:
    - "r3c1: delete candidate 1, because of: r3c2: candidates 1,3, r3c8: candidates 1,3"
    - "r3c8: delete candidate 3, r5c1: delete candidate 4, r5c2: delete candidates 3,4, because of: r5c6: candidates 3,4, r5c8: candidates 3,4"
  grid_output:
    - ╔═════════════════╦═════════════════╦═════════════════╗
    - ║     │     │   3 ║  23 │  2  │  23 ║     │     │     ║
    - ║  5  │  9  │     ║   6 │     │   6 ║  1  │  4  │  7  ║
    - ║     │     │  8  ║     │  8  │  8  ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║   3 │ 1   │ 1 3 ║     │ 12  │ 123 ║     │  2  │     ║
    - ║ 4 6 │ 4 6 │ 4   ║  9  │  5  │   6 ║  56 │   6 │  8  ║
    - ║     │     │     ║     │     │ 7   ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │ 1   │ 1   ║     │     │     ║
    - ║ 4 6 │  7  │  2  ║ 456 │  5  │   6 ║  56 │  3  │  5  ║
    - ║     │     │     ║     │  8  │  8  ║   9 │     │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │     │ 1 3 ║     │     │     ║     │     │ 1   ║
    - ║  7  │  56 │     ║  56 │  4  │   6 ║  2  │  9  │     ║
    - ║     │     │     ║     │     │  8  ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │ 1   ║     │     │     ║     │ 1   │     ║
    - ║ 4   │  2  │ 4   ║  5  │  3  │     ║  8  │     │  6  ║
    - ║   9 │     │   9 ║     │     │   9 ║     │ 7   │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │  2  ║   3 │     │   3 ║
    - ║  8  │   6 │     ║  1  │  7  │   6 ║ 4   │  5  │ 4   ║
    - ║     │     │   9 ║     │     │   9 ║     │     │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║  2  │     │     ║     │     │     ║   3 │ 1   │     ║
    - ║     │     │  5  ║  7  │  6  │  4  ║     │     │  9  ║
    - ║     │  8  │     ║     │     │     ║     │  8  │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │     │     ║  2  │ 12  │     ║     │ 1   │ 1   ║
    - ║ 4   │  3  │  6  ║     │     │  5  ║ 4   │     │ 4   ║
    - ║   9 │     │     ║     │   9 │     ║ 7   │ 78  │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │   3 ║   3 │     │     ║
    - ║  1  │ 4   │ 4   ║  8  │     │     ║ 456 │   6 │  2  ║
    - ║     │     │ 7 9 ║     │   9 │   9 ║ 7   │ 7   │     ║
    - ╚═════════════════╩═════════════════╩═════════════════╝
---
deductions:
  - reasons:
      - position:
          row: 3
          column: 2
        candidates:
          - 1
          - 3
      - position:
          row: 3
          column: 8
        candidates:
          - 1
          - 3
    actions:
      - position:
          row: 3
          column: 1
        deleteCandidates:
          - 1
  - reasons:
      - position:
          row: 5
          column: 6
        candidates:
          - 3
          - 4
      - position:
          row: 5
          column: 8
        candidates:
          - 3
          - 4
    actions:
      - position:
          row: 3
          column: 8
        deleteCandidates:
          - 3
      - position:
          row: 5
          column: 1
        deleteCandidates:
          - 4
      - position:
          row: 5
          column: 2
        deleteCandidates:
          - 3
          - 4
