sudoku-rs/src/solver/strategic/strategies/impls/snapshots/sudoku__solver__strategic__strategies__impls__naked_pairs__tests__snapshots__base_3_sample_5.snap
---
source: sudoku-rs/src/solver/strategic/strategies/impls/naked_pairs.rs
description: Strategy NakedPairs executed on grid base_3_sample_5
expression: "TransportDeductions :: from(deductions.clone())"
info:
  grid_input:
    - ╔═════════════════╦═════════════════╦═════════════════╗
    - ║     │ 12  │ 1   ║ 123 │     │     ║ 1 3 │     │     ║
    - ║  9  │     │     ║     │  8  │  4  ║     │  6  │  5  ║
    - ║     │ 7   │ 7   ║     │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │ 1   │     ║ 1 3 │ 1 3 │     ║     │   3 │     ║
    - ║  6  │     │  4  ║     │     │  5  ║  2  │     │  7  ║
    - ║     │  8  │     ║   9 │   9 │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │     │ 1   ║ 12  │     │  2  ║ 1   │     │     ║
    - ║  5  │  3  │     ║   6 │  7  │     ║ 4   │  8  │ 45  ║
    - ║     │     │     ║   9 │     │     ║   9 │     │   9 ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │     │     ║  23 │   3 │     ║     │  2  │  2  ║
    - ║  7  │  6  │     ║     │     │  1  ║  5  │ 4   │ 4   ║
    - ║     │     │  89 ║  8  │     │     ║     │     │  89 ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │     │     ║  2  │     │  2  ║     │  2  │     ║
    - ║ 4   │  5  │  3  ║   6 │   6 │     ║ 4   │ 4   │  1  ║
    - ║     │     │     ║ 78  │     │ 78  ║  89 │ 7   │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │ 12  │ 1   ║     │     │     ║     │  2  │     ║
    - ║     │     │     ║  4  │  5  │  9  ║  6  │     │  3  ║
    - ║     │  8  │  8  ║     │     │     ║     │ 7   │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │     │     ║     │     │     ║   3 │     │     ║
    - ║  1  │ 4   │  5  ║     │  2  │  6  ║ 4   │  9  │ 4   ║
    - ║     │ 7   │     ║ 78  │     │     ║  8  │     │  8  ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║   3 │     │     ║ 1   │     │     ║   3 │   3 │     ║
    - ║     │     │  2  ║  5  │  4  │     ║     │  5  │  56 ║
    - ║     │ 7 9 │     ║ 789 │     │ 78  ║  8  │     │  8  ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │     ║     │     │  2  ║
    - ║  8  │ 4   │   6 ║  5  │  5  │  3  ║  7  │  1  │ 456 ║
    - ║     │   9 │   9 ║   9 │   9 │     ║     │     │     ║
    - ╚═════════════════╩═════════════════╩═════════════════╝
  deductions:
    - "r7c3: delete candidates 7,8, because of: r6c3: candidates 7,8, r7c5: candidates 7,8"
    - "r7c3: delete candidates 5,9, r8c1: delete candidate 9, r8c2: delete candidate 9, r8c8: delete candidate 5, because of: r8c3: candidates 5,9, r8c4: candidates 5,9"
  grid_output:
    - ╔═════════════════╦═════════════════╦═════════════════╗
    - ║     │ 12  │ 1   ║ 123 │     │     ║ 1 3 │     │     ║
    - ║  9  │     │     ║     │  8  │  4  ║     │  6  │  5  ║
    - ║     │ 7   │ 7   ║     │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │ 1   │     ║ 1 3 │ 1 3 │     ║     │   3 │     ║
    - ║  6  │     │  4  ║     │     │  5  ║  2  │     │  7  ║
    - ║     │  8  │     ║   9 │   9 │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │     │ 1   ║ 12  │     │  2  ║ 1   │     │     ║
    - ║  5  │  3  │     ║   6 │  7  │     ║ 4   │  8  │ 45  ║
    - ║     │     │     ║   9 │     │     ║   9 │     │   9 ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │     │     ║  23 │   3 │     ║     │  2  │  2  ║
    - ║  7  │  6  │     ║     │     │  1  ║  5  │ 4   │ 4   ║
    - ║     │     │  89 ║  8  │     │     ║     │     │  89 ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │     │     ║  2  │     │  2  ║     │  2  │     ║
    - ║ 4   │  5  │  3  ║   6 │   6 │     ║ 4   │ 4   │  1  ║
    - ║     │     │     ║ 78  │     │ 78  ║  89 │ 7   │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │ 12  │ 1   ║     │     │     ║     │  2  │     ║
    - ║     │     │     ║  4  │  5  │  9  ║  6  │     │  3  ║
    - ║     │  8  │  8  ║     │     │     ║     │ 7   │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │     │     ║     │     │     ║   3 │     │     ║
    - ║  1  │ 4   │  5  ║     │  2  │  6  ║ 4   │  9  │ 4   ║
    - ║     │ 7   │     ║ 78  │     │     ║  8  │     │  8  ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║   3 │     │     ║ 1   │     │     ║   3 │   3 │     ║
    - ║     │     │  2  ║     │  4  │     ║     │  5  │  56 ║
    - ║     │ 7 9 │     ║     │     │ 78  ║  8  │     │  8  ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │     ║     │     │  2  ║
    - ║  8  │ 4   │   6 ║  5  │  5  │  3  ║  7  │  1  │ 4 6 ║
    - ║     │     │     ║   9 │   9 │     ║     │     │     ║
    - ╚═════════════════╩═════════════════╩═════════════════╝
---
deductions:
  - reasons:
      - position:
          row: 6
          column: 3
        candidates:
          - 7
          - 8
      - position:
          row: 7
          column: 5
        candidates:
          - 7
          - 8
    actions:
      - position:
          row: 7
          column: 3
        deleteCandidates:
          - 7
          - 8
  - reasons:
      - position:
          row: 8
          column: 3
        candidates:
          - 5
          - 9
      - position:
          row: 8
          column: 4
        candidates:
          - 5
          - 9
    actions:
      - position:
          row: 7
          column: 3
        deleteCandidates:
          - 5
          - 9
      - position:
          row: 8
          column: 1
        deleteCandidates:
          - 9
      - position:
          row: 8
          column: 2
        deleteCandidates:
          - 9
      - position:
          row: 8
          column: 8
        deleteCandidates:
          - 5
